syntax = "proto3";

package user_management;

option go_package = "./proto;user_management";

service User_management {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
	string say = 1;
}

message CreateUserResponse {
	string name = 1;
}

message GetUserRequest {
	string msg = 1;
}

message GetUserResponse {
	string msg = 1;
}

message UpdateUserRequest {
	string msg = 1;
}

message UpdateUserResponse {
	string msg = 1;
}

message DeleteUserRequest {
	string msg = 1;
}

message DeleteUserResponse {
	string msg = 1;
}