syntax = "proto3";

package userauth;

option go_package = "./proto;userauth";

service Userauth {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}

	rpc UserLogin(LoginRequest) returns (LoginResponse){}
}

message Message {
	string say = 1;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string AccessToken  = 1;
	string RefreshToken  = 2;
	string AccessUuid  = 3;
	string RefreshUuid  = 4;
	int64 AtExpires  = 5;
	int64 RtExpires  = 6;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
